# moodflix

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  fly.toml  index.html  model.txt  movie_objs.json  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: movie_objs.json
scripts/: generate_readme.py
src/: build_idx.py
src/moodflix/: Moodflix.py  caches.py  extras.py  text.py  transformer.py  utils.py
src/moodflix/components/: header.py
